create message window container

--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -401,7 +401,7 @@ $(PWD)/envelope:
 ###############################################################################
 # libgui
 LIBGUI=		libgui.a
-LIBGUIOBJS=	gui/curs_lib.o gui/dialog.o gui/global.o gui/msgwin.o \
+LIBGUIOBJS=	gui/curs_lib.o gui/dialog.o gui/global.o gui/msgcont.o gui/msgwin.o \
 		gui/mutt_curses.o gui/mutt_window.o gui/reflow.o gui/rootwin.o \
 		gui/sbar.o gui/simple.o gui/terminal.o
 CLEANFILES+=	$(LIBGUI) $(LIBGUIOBJS)
