--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -697,7 +697,7 @@ $(PWD)/postpone:
 ###############################################################################
 # libprogress
 LIBPROGRESS=	libprogress.a
-LIBPROGRESSOBJS=progress/progress.o
+LIBPROGRESSOBJS=	progress/progress.o progress/wdata.o progress/window.o
 CLEANFILES+=	$(LIBPROGRESS) $(LIBPROGRESSOBJS)
 ALLOBJS+=	$(LIBPROGRESSOBJS)
 
