enter: add test coverage
Add tests for all of the editor functions.

--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -903,6 +903,7 @@ coverage: all test
 	  --directory config \
 	  --directory core \
 	  --directory email \
+	  --directory enter \
 	  --directory mutt \
 	  --directory notmuch \
 	  --directory pattern \
